# open-DARTS

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  README.md  build_darts.bat  build_darts.sh  build_darts_ODLS.bat  build_darts_iter.bat  build_install_darts.bat  build_install_darts.sh  build_install_darts_deps.sh  generate_whatsnew.py  init_conda.bat  paper.bib  paper.md  pyproject.toml  setup.py  walkthrough.md
commons/: CMakeLists.txt
commons/src/: commons.cpp  commons.h  py_commons.cpp
darts-flash/: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
darts-flash/.cicd/jobs/: build-linux.yml  build-windows.yml  deploy.yml  test-linux.yml  test-windows.yml  valgrind-check.yml
darts-flash/cpp/: CMakeLists.txt
darts-flash/cpp/eos/: eos.cpp  eos_params.cpp  ideal.cpp
darts-flash/cpp/flash/: flash.cpp  flash_params.cpp  flash_results.cpp  initial_guess.cpp  negative_flash.cpp  px_flash.cpp  trial_phase.cpp
darts-flash/cpp/global/: components.cpp  global.cpp  timer.cpp  units.cpp
darts-flash/cpp/maths/: geometry.cpp  linesearch.cpp  maths.cpp  modifiedcholeskys99.cpp  root_finding.cpp
darts-flash/cpp/phase-split/: basesplit.cpp  multiphasesplit.cpp  twophasesplit.cpp
darts-flash/cpp/pybind/: py_eos.cpp  py_flash.cpp  py_global.cpp  py_main.cpp  py_phasesplit.cpp  py_rr.cpp  py_stability.cpp
darts-flash/cpp/rr/: rr.cpp  rr_eqconvex2.cpp  rr_eqn.cpp  rr_min.cpp
darts-flash/cpp/stability/: stability.cpp
darts-flash/dartsflash/: components.py  dartsflash.py  diagram.py  hyflash.py  mixtures.py  plot.py
darts-flash/docs/: api.rst  conf.py  index.rst
darts-flash/docs/about_darts-flash/: about.md
darts-flash/docs/for_developers/: build_instructions.md  gitlab_setup.md
darts-flash/docs/getting_started/: installation.md
darts-flash/examples/cpp/: CMakeLists.txt  negativeflash.cpp  stabilityflash.cpp
darts-flash/examples/py-notebooks/: 1.EoS.ipynb  2.CO2.ipynb  3.Gas-mixture.ipynb  4.Gas-brine.ipynb
darts-flash/examples/python/: eos_properties.py  h2o.py  hydrate_equilibrium.py  iapws.py  pt_1comp.py  pt_2comp.py  pt_3comp.py  pt_ncomp.py  solubility.py  vl.py  vl_aq.py
darts-flash/helper_scripts/: build-mingw.bat  build.bat  build.sh  build_install.sh  valgrind-python.supp  valgrind_check.py
darts-flash/tests/python/: conftest.py  test_api.py  test_eos_properties.py  test_flash_brine_vapour2.py  test_flash_iapws.py  test_flash_vl.py  test_flash_vlaq.py  test_flash_vlaqh.py
discretizer/: .gitignore  CMakeLists.txt  Makefile  conf_gcc.mk  darts-discretizer.vcxproj  darts-discretizer.vcxproj.filters
discretizer/src/: CMakeLists.txt  approximation.h  discretizer.cpp  discretizer.h  discretizer_build_info.cpp.in  mech_discretizer.cpp  mech_discretizer.h  utils.h
discretizer/src/linalg/: matrix.h  vector3.h
discretizer/src/mesh/: CMakeLists.txt  elem.cpp  elem.h  mesh.cpp  mesh.h  vtksnapshotter.h
discretizer/src/opm/: config.h
discretizer/src/pybind11/: CMakeLists.txt  py_approximation.cpp  py_discretizer.cpp  py_discretizer.h  py_elem.cpp  py_elem.h  py_global.h  py_linalg.cpp  py_linalg.h  py_main.cpp  py_mech_discretizer.cpp  py_mech_discretizer.h  py_mesh.cpp  py_mesh.h
discretizer/tests/compare_discretizers/: main.py  reservoir.py
dwell/: .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
dwell/dwell/single_phase_non_isothermal/: add_bc_extra_nodes.py  add_bc_nodes.py  add_bc_sources_sinks.py  assemble_primary_variables_list.py  define_fluid_model.py  define_pipe_geometry.py  pipe_model.py  save_results.py  set_initial_conditions.py  simulate.py
dwell/dwell/two_phase/: add_bc_extra_nodes.py  add_bc_sources_sinks.py  assemble_primary_variables_list.py  calc_rough_K_value.py  check_initial_conditions.py  define_fluid_model.py  define_pipe_geometry.py  generate_rampup_time_steps.py  pipe_model.py  save_results.py  set_initial_conditions.py  set_initial_conditions_wh_at_centroid.py  simulate.py
dwell/dwell/utilities/: library.py  units.py
dwell/examples/single_phase_non_isothermal/: main.py  main_validation_single_phase_of_CO2.py  main_validation_single_phase_of_water.py  visualize_results.py
dwell/examples/two_phase/: main_full_column_of_gas_CO2_variable_K_2-comp.py  (+18 more)
dwell/tests/: test_results.py
engines/: .gitignore  CMakeLists.txt  Makefile  Makefile_lisa  Makefile_lisa2  conf_gcc.mk  conf_nvcc.mk  darts-engines.sln  darts-engines.vcxproj  darts-engines.vcxproj.filters  darts-engines_gpu.vcxproj.filters  update_private_artifacts.bat  update_private_artifacts.sh
engines/doxygen/: DARTS_engine.lnk  Doxyfile
engines/lib/: .gitignore  CMakeLists.txt
engines/src/: CMakeLists.txt  block_well.cpp  block_well.h  conn_mesh.cpp  conn_mesh.h  cpu_benchmark.h  engine_base.cpp  engine_base.h  engine_base_gpu.cpp  engine_base_gpu.h  engine_nc_cg_cpu.cpp  engine_nc_cg_cpu.hpp  engine_nc_cg_gpu.cu  engine_nc_cg_gpu.hpp  engine_nc_gpu.cu  engine_nc_gpu.hpp  engine_nc_mp_cpu.cpp  engine_nc_mp_cpu.hpp  engine_nc_nl_cpu.cpp  engine_nc_nl_cpu.hpp  engine_nc_nonnewton_cpu.cpp  engine_nc_nonnewton_cpu.hpp  engine_nce_g_cpu.cpp  engine_nce_g_cpu.hpp  engine_nce_g_gpu.cu  engine_nce_g_gpu.hpp  engine_super_cpu.hpp  engine_super_cpu.tpp  engine_super_gpu.hpp  engine_super_gpu.tpp  engine_super_mp_cpu.hpp  engine_super_mp_cpu.tpp  engines_build_info.cpp.in  engines_build_info.h  globals.cpp  globals.h  gpu_benchmark.cu  gpu_benchmark.cu.h  gpu_simulator.cu  gpu_simulator.cu.h  (+11 more)
opendarts_linear_solvers/: .clang-format  CMakeLists.txt  README.md
opendarts_linear_solvers/auxiliary/: CMakeLists.txt
opendarts_linear_solvers/helper_scripts/: build_linux.sh  build_macos.sh
opendarts_linear_solvers/tests/: CMakeLists.txt
solvers/: .gitignore  CMakeLists.txt  README.md
solvers/auxiliary/: CMakeLists.txt
solvers/config/: CMakeLists.txt
solvers/helper_scripts/: build_linux.sh  build_macos.sh
solvers/linear_solvers/: CMakeLists.txt
(+1872 files in other folders)
