[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-darts-flash"
version = "0.11.1"
description = "Multiphase equilibrium and thermodynamic models for subsurface energy transition applications"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["flash", "multiphase", "simulation"]
authors = [{name = "Michiel Wapperom", email = "M.B.Wapperom@tudelft.nl" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy", "xarray"]

[project.optional-dependencies]
plot = ["matplotlib"]
docs = ["myst-parser", "sphinx_rtd_theme", "sphinx", "sphinx-tabs", "sphinx_inline_tabs", "sphinxcontrib-matlabdomain", "sphinxcontrib-bibtex", "linkify-it-py", "sphinx-copybutton"]
test = ["pytest", "h5netCDF", "matplotlib"]

[project.urls]
"Homepage" = "https://gitlab.com/open-darts/open-darts-flash"
