[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-dwell"
version = "0.1.2"
description = "A stand alone wellbore simulator for energy transition applications."
authors = [
  { name="Sajjad Moslehi", email="s.moslehi@tudelft.nl" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["energy transition", "subsurface CO2 sequestration", "geothermal energy extraction", "underground hydrogen storage"]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "numba",
    "open-darts-flash==0.10.2",
    "matplotlib"
]

[project.urls]
Homepage = "https://darts.citg.tudelft.nl/members.html"
Repository = "https://gitlab.com/open-darts/dwell"

[project.scripts]
dwell = "open_dwell.__main__:main"